# hal-simplicity

./: Cargo.toml
src/: lib.rs
src/daemon/: handler.rs  mod.rs  types.rs
src/daemon/jsonrpc/: mod.rs
tests/: cli.rs
